--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     implementation 'me.dm7.barcodescanner:zxing:1.9.13'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
+    implementation 'com.google.code.gson:gson:2.8.6'
+
     implementation "androidx.work:work-runtime:2.3.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
