--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:fullBackupContent="@xml/my_backup_rules">
         <activity android:name=".SyncNfcActivity" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".AddProductActivity" />
@@ -51,6 +52,7 @@
                 android:value="splitActionBarWhenNarrow" />
         </activity>
         <activity android:name=".EditProductActivity" />
+        <activity android:name=".BarcodeScanner.BaseScannerActivity" />
     </application>
 
 </manifest>
